# lotto

./: Dockerfile  README.md  fly.toml
ui/: package-lock.json  package.json  svelte.config.js
ui/src/components/: DbChart.svelte  LastWinning.svelte  LoadingSpinner.svelte  NumberGenerator.svelte  ThemeToggle.svelte  WinningStores.svelte
ui/src/lib/: lottoAPI.js  utils.js
ui/src/lib/stores/: theme.js
ui/src/routes/: +page.svelte
ui/src/routes/api/lotto/db-chart/: +server.js
ui/src/routes/api/lotto/generate/: +server.js
ui/src/routes/api/lotto/last-winning/: +server.js
ui/src/routes/api/lotto/winning-stores/: +server.js
webserver/: 404.html  Cargo.toml  main.html  predictor.py  test.html
webserver/src/: lib.rs  main.rs
