[package]
name = "webserver"
version = "0.1.1-dev"
edition = "2021"
author = "JongBum Park"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
actix-cors = "0.7.0"
actix-files = "0.6"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.21"
tokio-rusqlite = "0.6.0" 
#rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1.34", features = ["full"] }
chrono = "0.4"
